--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React-Mesto-Auth</title>
+    <title>Место</title>
   </head>
   <body class="page">
     <div id="root"></div>
